--- a/src/components/loginform/loginform.component.scss
+++ b/src/components/loginform/loginform.component.scss
@@ -1,16 +1,30 @@
 @import '../../styles/theme';
 
-body{
-  background-image: url('../../images/login-background.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  font-size: 13px;
+.loginArea {
+  .bg-image {
+    background-image: url('../../images/login-background.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    font-size: 13px;
+    position: fixed;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    display: block;
+    width: 100%;
+    height: 100%;
+    filter: blur(5px);
+  }
   .login--wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     overflow: hidden;
+    position: fixed;
+    left: 0;
+    right: 0;
+    z-index: 9999;
   .card {
     height: 450px;
     margin-top: auto;
@@ -37,7 +51,7 @@ body{
       input[type=submit] {
         width: 100%;
         background: linear-gradient(90deg, rgba(243,212,87,1) 0%, rgba(255,223,99,1) 100%);
-        color: white;
+        color: rgba(45, 31, 86, 0.9);
         padding: 14px 20px;
         margin: 8px 0;
         text-transform: uppercase;
@@ -74,9 +88,9 @@ body{
         padding: 0;
         margin: 0;
         margin-bottom: 10px;
+        color: rgba(169, 168, 175, 0.9);
       }
     }
   }
 }
 }
-
