Slightly modified styling and fixed padding

--- a/src/components/serverbrowser/serverbrowser.component.scss
+++ b/src/components/serverbrowser/serverbrowser.component.scss
@@ -22,7 +22,7 @@
             font-size: 30px;
             transform: scaleX(-1);
             text-align: center;
-            color: $typography-1;
+            color: #a6aaad;
         }
     }
     .serverBrowser__server-list {
@@ -67,7 +67,7 @@
         left: 0;
         right: 0;
         margin: 0 auto;
-        padding: 5px 20px;
+        padding: 5px 22px;
         a {
             font-size: 25px;
             color: #a6aaad;
