--- a/src/components/loginform/loginform.component.scss
+++ b/src/components/loginform/loginform.component.scss
@@ -1,6 +1,7 @@
 @import '../../styles/theme';
 
 .loginArea {
+  font-family: 'Ubuntu', sans-serif;
   .bg-image {
     background-image: url('../../images/login-background.jpg');
     background-size: cover;
@@ -35,60 +36,74 @@
       text-align: center;
       border: none;
       padding: 0;
+      padding-bottom: 10px;
       .verseLogo {
         max-width: 75%;
         height: auto;
       }
-      p {
+      .signInText {
         text-transform: uppercase;
+        top: 95px;
+        font-size: 12px;
       }
     }
     .card-body {
-      label {
-        margin: 0;
-        text-transform: uppercase;
-      }
-      input[type=submit] {
-        width: 100%;
-        background: linear-gradient(90deg, rgba(243,212,87,1) 0%, rgba(255,223,99,1) 100%);
-        color: rgba(45, 31, 86, 0.9);
-        padding: 14px 20px;
-        margin: 8px 0;
-        text-transform: uppercase;
-        border: none;
-        border-radius: 2px;
-        cursor: pointer;
-        &:hover {
-          background-color: #45a049;
+      .emailArea, .passwordArea {
+        text-align: left;
+        label {
+          margin: 0;
+          text-transform: uppercase;
+          font-weight: bold;
+          text-align: left;
+          padding-left: 16px;
+          font-size: 13px;
+        }
+        .form-group {
+          margin: 0;
+        input[type=email], input[type=password] {
+          width: 100%;
+          height: 30px;
+          padding: 0;
+          margin: 8px 0;
+          display: inline-block;
+          border: 0;
+          border-bottom: 1px solid #c2cad8;
+          border-radius: 0;
+          background: none;
+          color: white;
+          &:focus {
+            box-shadow: none;
+            outline: none;
+          }
         }
       }
-      input[type=email], input[type=password] {
-        width: 100%;
-        height: 30px;
-        padding-top: 0;
-        padding-bottom: 12px;
-        padding-left: 20px;
-        padding-right: 20px;
-        margin: 8px 0;
-        display: inline-block;
-        border: 0;
-        border-bottom: 1px solid #c2cad8;
-        border-radius: 0;
-        background: none;
-        color: white;
-        &:focus {
-          box-shadow: none;
-          outline: none;
+      }
+      .loginButton {
+        input[type=submit] {
+          width: 100%;
+          background: linear-gradient(90deg, rgba(243,212,87,1) 0%, rgba(255,223,99,1) 100%);
+          color: rgba(45, 31, 86, 0.9);
+          padding: 14px 20px;
+          margin: 8px 0;
+          text-transform: uppercase;
+          border: none;
+          border-radius: 2px;
+          font-weight: bold;
         }
       }
+
+
       .forgotp, .createAccount {
+        position: unset;
         text-transform: uppercase;
-        float: right;
+        text-align: right;
         font-size: 10px;
         padding: 0;
         margin: 0;
-        margin-bottom: 10px;
         color: rgba(169, 168, 175, 0.9);
+      }
+      .forgotp {
+        margin-bottom: 10px;
       }
     }
   }
