--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -3,7 +3,7 @@ $palace-gold: rgb(255, 232, 36);
 $color-borders-main: #38304F;
 $color-borders-alt: #FFE824;
 $typography-1: rgb(245, 245, 245);
-$typography-2: #938DA6;
+$typography-2: #a6aaad;
 
 //MACOS TRAFFIC LIGHT COLORS
 $close-red: #ff6159;
