--- a/src/components/loginform/loginform.component.scss
+++ b/src/components/loginform/loginform.component.scss
@@ -79,7 +79,7 @@
       }
       }
       .loginButton {
-        input[type=submit] {
+        button[type=submit] {
           width: 100%;
           background: linear-gradient(90deg, rgba(243,212,87,1) 0%, rgba(255,223,99,1) 100%);
           color: rgba(45, 31, 86, 0.9);
@@ -89,6 +89,7 @@
           border: none;
           border-radius: 2px;
           font-weight: bold;
+          font-size: 14px;
         }
       }
 
