--- a/src/components/loginform/loginform.component.scss
+++ b/src/components/loginform/loginform.component.scss
@@ -41,10 +41,10 @@
         max-width: 75%;
         height: auto;
       }
-      .signInText {
+      .form-label {
         text-transform: uppercase;
-        top: 95px;
         font-size: 12px;
+        color: white;
       }
     }
     .card-body {
