--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -229,7 +229,7 @@ legend.form-label {
 .form-hint {
   font-size: 0.6rem;
   line-height: 1.4;
-  margin: -5px auto 5px;
+  margin: 0 auto;
   color: #999;
 
   &.error {
