--- a/src/components/serverbrowser/serverbrowser.component.scss
+++ b/src/components/serverbrowser/serverbrowser.component.scss
@@ -31,13 +31,17 @@
         height: 100%;
         .server {
             margin: 10px auto;
-            padding: 1px 9px;
+            padding: 8px 9px;
             height: 45px;
             width: 45px;
             background-color: #342a54;
             border-radius: 50%;
             border: 2px solid $color-borders-main;
             a {
+                position: relative;
+                text-align: center;
+                padding: 4px 7px;
+                color: #a6aaad;
                 img {
                     position: relative;
                     top: 0px;
@@ -45,9 +49,14 @@
                     height: 38px;
                     width: 48px;
                 }
+                &:hover {
+                    padding: 5px 7px;
+                    text-decoration: none;
+                    text-shadow: none;
+                }
             }
             &:hover {
-                padding: 1px 9px;
+                padding: 9px 10px;
                 border: 1px solid $palace-gold;
                 box-shadow: 0px 1px 10px rgb(255, 232, 36);
             }
