--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -217,9 +217,12 @@ legend.form-label {
 }
 
 .control-label {
-  font-size: 0.8rem;
+  margin: 0;
+  text-transform: uppercase;
   font-weight: bold;
-  color: desaturate(darken($primary, 10%), 80%);
+  text-align: left;
+  padding-left: 0;
+  font-size: 0.8125em;
 }
 
 .form-control {
@@ -235,6 +238,7 @@ legend.form-label {
   &.error {
     color: #C00;
     font-size: 0.8rem;
+    margin: 0;
   }
 }
 
