--- a/src/components/serverbrowser/serverbrowser.component.scss
+++ b/src/components/serverbrowser/serverbrowser.component.scss
@@ -26,52 +26,76 @@
         }
     }
     .serverBrowser__server-list {
-        display: block;
-        margin: 0px auto;
-        height: 100%;
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+
+
         .server {
-            margin: 10px auto;
-            padding: 8px 9px;
-            height: 45px;
-            width: 45px;
+            margin: 6px auto;
+            padding: 12px 13px;
+            height: 50px;
+            width: 50px;
             background-color: #342a54;
             border-radius: 50%;
-            border: 2px solid $color-borders-main;
-            a {
-                position: relative;
-                text-align: center;
-                padding: 4px 7px;
-                color: #a6aaad;
-                img {
-                    position: relative;
-                    top: 0px;
-                    right: 17px;
-                    height: 38px;
-                    width: 48px;
-                }
-                &:hover {
-                    padding: 5px 7px;
-                    text-decoration: none;
-                    text-shadow: none;
-                }
-            }
+            text-align: center;
+            text-decoration: none;
+            color: #a6aaad;
+            text-shadow: none;
             &:hover {
-                padding: 9px 10px;
+                padding: 11px 13px;
                 border: 1px solid $palace-gold;
                 box-shadow: 0px 1px 10px rgb(255, 232, 36);
             }
-            .active {
-                color: $palace-gold;
-            }
         }
-        .add-server-button {
-            text-align: center;
-            font-size: 20px;
-            padding: 6px 10px;
-            &:hover {
-                padding: 7px 10px;
-            }
+        .active {
+            padding: 11px 13px;
+            border: 1px solid $palace-gold !important;
+            box-shadow: 0px 1px 10px rgb(255, 232, 36);
         }
+        // .server {
+        //     margin: 10px auto;
+        //     padding: 8px 9px;
+        //     height: 45px;
+        //     width: 45px;
+        //     background-color: #342a54;
+        //     border-radius: 50%;
+        //     border: 2px solid $color-borders-main;
+        //     a {
+        //         position: relative;
+        //         text-align: center;
+        //         padding: 4px 7px;
+        //         color: #a6aaad;
+        //         img {
+        //             position: relative;
+        //             top: 0px;
+        //             right: 17px;
+        //             height: 38px;
+        //             width: 48px;
+        //         }
+        //         &:hover {
+        //             padding: 5px 7px;
+        //             text-decoration: none;
+        //             text-shadow: none;
+        //         }
+        //     }
+        //     &:hover {
+        //         padding: 9px 10px;
+        //         border: 1px solid $palace-gold;
+        //         box-shadow: 0px 1px 10px rgb(255, 232, 36);
+        //     }
+        //     .active {
+        //         color: $palace-gold;
+        //     }
+        // }
+        // .add-server-button {
+        //     text-align: center;
+        //     font-size: 20px;
+        //     padding: 6px 10px;
+        //     &:hover {
+        //         padding: 7px 10px;
+        //     }
+        // }
     }
     .serverBrowser__foot-menu {
         position: absolute;
