--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -192,17 +192,38 @@ $strength-gap: 6px;
 //   font-size: 62.5%;
 // }
 
-.loginContainer {
+.login--wrapper {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  width: 100%;
-  text-align: center;
-}
-
-.form-container {
-  bottom: 100px;
+  align-items: center;
+  height: 100vh;
+  overflow: hidden;
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+  .card {
+    height: 450px;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 425px;
+    background-color: rgba(45, 31, 86, 0.9);
+    .card-header {
+      text-align: center;
+      border: none;
+      padding: 0;
+      padding-bottom: 10px;
+      .verseLogo {
+        max-width: 75%;
+        height: auto;
+      }
+      .form-label {
+        text-transform: uppercase;
+        font-size: 12px;
+        color: white;
+      }
+    }
+  }
 }
 
 legend.form-label {
