--- a/src/pages/login/login.style.scss
+++ b/src/pages/login/login.style.scss
@@ -14,4 +14,21 @@
         height: 100%;
         filter: blur(5px);
     }
+    .accountPresent {
+        text-align: center;
+        bottom: 0;
+        padding-top: 575px;
+        z-index: 9999;
+        position: relative;
+        font-size: 0.8125em;
+        button[type=button] {
+            text-align: right;
+            margin: 0 auto;
+            display: flex;
+            align-items: center;
+            color: white;
+            text-transform: uppercase;
+        }  
+    }
+
 }
