--- a/src/pages/login/login.style.scss
+++ b/src/pages/login/login.style.scss
@@ -25,6 +25,7 @@
             color: white;
             text-decoration: none;
             text-transform: uppercase;
+            cursor: pointer;
         }  
     }
 
