--- a/src/components/loginform/loginform.component.scss
+++ b/src/components/loginform/loginform.component.scss
@@ -39,7 +39,7 @@
       }
 
 
-      .forgotp, .createAccount {
+      .forgotp, .createAccount, button[type=button] {
         position: unset;
         text-transform: uppercase;
         text-align: right;
