--- a/src/components/RegistrationForm/RegistrationForm.component.scss
+++ b/src/components/RegistrationForm/RegistrationForm.component.scss
@@ -37,12 +37,13 @@
           font-size: 0.875em;
         }
       }
-      .accountPresent {
-        text-align: center;
-        .form-label {
-          text-transform: uppercase;
-          font-size: 0.625em;
-          color: white;
-        }
+      .accountPresent, button[type=button] {
+        position: unset;
+        text-transform: uppercase;
+        text-align: right;
+        font-size: 10px;
+        padding: 0;
+        margin: 0;
+        color: rgba(169, 168, 175, 0.9);
       }
     }
