--- a/src/components/RegistrationForm/RegistrationForm.component.scss
+++ b/src/components/RegistrationForm/RegistrationForm.component.scss
@@ -40,10 +40,16 @@
       .accountPresent, button[type=button] {
         position: unset;
         text-transform: uppercase;
-        text-align: right;
+        text-align: center;
         font-size: 10px;
         padding: 0;
         margin: 0;
         color: rgba(169, 168, 175, 0.9);
+        .accountPresentButton {
+          width: 100%;
+          height: 100%;
+          font-size: 12px;
+          color: white;
+        }
       }
     }
