--- a/src/components/loginform/loginform.component.scss
+++ b/src/components/loginform/loginform.component.scss
@@ -47,6 +47,12 @@
         padding: 0;
         margin: 0;
         color: rgba(169, 168, 175, 0.9);
+        .createAccountButton {
+          width: 100%;
+          height: 100%;
+          font-size: 12px;
+          color: white;
+        }
       }
       .forgotp {
         margin-bottom: 10px;
