--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -70,6 +70,9 @@
             a {
                 font-size: 17px;
                 color: $typography-2;
+                &:hover {
+                    color: #818181;
+                }
             }
         }
     }
