--- a/src/components/ServerBrowser/styles.scss
+++ b/src/components/ServerBrowser/styles.scss
@@ -103,10 +103,14 @@
         left: 0;
         right: 0;
         margin: 0 auto;
-        padding: 5px 22px;
+        padding: 5px 16px;
         a {
+            padding: 2px 7px;
             font-size: 25px;
             color: #a6aaad;
+            &:hover {
+                color: #818181;
+            }
         }
     }
 }
