--- a/src/components/ServerBrowser/styles.scss
+++ b/src/components/ServerBrowser/styles.scss
@@ -29,8 +29,6 @@
         display: flex;
         flex-direction: column;
         height: 100vh;
-
-
         .server {
             margin: 6px auto;
             padding: 10px 13px;
@@ -42,6 +40,7 @@
             text-decoration: none;
             color: #a6aaad;
             text-shadow: none;
+            transition: all 300ms ease-in-out;
             &:hover {
                 padding: 9px 13px;
                 border: 1px solid $palace-gold;
