--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -165,6 +165,9 @@ body {
     padding-left: 0px;
     padding-right: 0px;
     max-width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 .draggableTop {
     height: 66px;
@@ -176,7 +179,7 @@ body {
 }
 
 .mainContainer {
-    height: 100%;
+  flex: 1;
 }
 
 
