--- a/src/components/ServerBrowser/styles.scss
+++ b/src/components/ServerBrowser/styles.scss
@@ -182,29 +182,29 @@
 //         }
 //     }
 // }
-// .addServerModal {
-//     margin-top: 15em;
-//     form {
-//         display: flex;
-//         align-content: center;
-//         flex-direction: column;
-//         margin: auto;
-//         width: 400px;
-//         input {
-//             outline: 0;
-//             border-top: none; border-left: none; border-right: none;
-//             border-bottom: 1px solid #d8d1ec;
-//             width: inherit;
-//         }
-//         label {
-//             font-size: 12px;
-//             color: #b3b1bb;
-//         }
-//     }
-//     // input {
-//     //     outline: 0;
-//     //     border-top: none; border-left: none; border-right: none;
-//     //     border-bottom: 1px solid $color-borders-main;
-//     //     width: 400px;
-//     // }
-// }
+.addServerModal {
+    margin-top: 15em;
+    form {
+        display: flex;
+        align-content: center;
+        flex-direction: column;
+        margin: auto;
+        width: 400px;
+        input {
+            outline: 0;
+            border-top: none; border-left: none; border-right: none;
+            border-bottom: 1px solid #d8d1ec;
+            width: inherit;
+        }
+        label {
+            font-size: 12px;
+            color: #b3b1bb;
+        }
+    }
+    // input {
+    //     outline: 0;
+    //     border-top: none; border-left: none; border-right: none;
+    //     border-bottom: 1px solid $color-borders-main;
+    //     width: 400px;
+    // }
+}
