Prevent submit if value is empty on create modal.

--- a/src/components/ServerBrowser/styles.scss
+++ b/src/components/ServerBrowser/styles.scss
@@ -200,6 +200,11 @@
             font-size: 12px;
             color: #b3b1bb;
         }
+        button {
+          &:focus {
+            outline: none;
+          }
+        }
     }
     // input {
     //     outline: 0;
