Changed all references from server to community

--- a/src/components/CommunityNavigation/styles.scss
+++ b/src/components/CommunityNavigation/styles.scss
@@ -1,8 +1,8 @@
 @import '../../styles/theme';
-.server-navigation {
+.community-navigation {
     border-right: 1px solid $color-borders-main;
     width: 245px;
-    .server-navigation-header {
+    .community-navigation-header {
         height: 55px;
         padding: 20px 15px;
         border-bottom: 1px solid $color-borders-main;
