--- a/src/components/CommunityNavigation/styles.scss
+++ b/src/components/CommunityNavigation/styles.scss
@@ -9,7 +9,7 @@
         h4 {
             margin-top: -5px;
             margin-left: 20px;
-            color: $typography-1;
+            color: $typography-2;
             font-size: 15px;
         }
         span {
@@ -18,6 +18,34 @@
             left: 20px;
             font-size: 10px;
             font-weight: bold;
+        }
+    }
+    .community-navigation-chlist {
+        margin-top: 5px;
+        ul {
+            list-style-type: none;
+            li {
+                margin-top: 2px;
+                margin-left: -32px;
+                width: 230px;
+                padding: 9px 15px;
+                border-radius: 5px;
+                span {
+                    padding: 5px;
+                }
+                a {
+                    color: $typography-2;
+                    font-weight: 400;
+                    font-size: 15px;
+                    &:hover {
+                        text-decoration: none;
+                        text-shadow: none;
+                    }
+                }
+                &:hover {
+                    background-color: #38304F;
+                }
+            }
         }
     }
 }
