--- a/src/components/CommunityNavigation/styles.scss
+++ b/src/components/CommunityNavigation/styles.scss
@@ -7,10 +7,10 @@
         padding: 20px 15px;
         border-bottom: 1px solid $color-borders-main;
         h4 {
-            margin-top: -5px;
-            margin-left: 20px;
+            // margin-top: -5px;
+            // margin-left: 20px;
             color: $typography-2;
-            font-size: 15px;
+            font-size: 14px;
         }
         span {
             position: relative;
