--- a/src/components/CommunityNavigation/styles.scss
+++ b/src/components/CommunityNavigation/styles.scss
@@ -21,31 +21,62 @@
         }
     }
     .community-navigation-chlist {
+        display: flex;
+        flex-direction: column;
         margin-top: 5px;
-        ul {
-            list-style-type: none;
-            li {
-                margin-top: 2px;
-                margin-left: -32px;
-                width: 230px;
-                padding: 9px 15px;
-                border-radius: 5px;
-                span {
-                    padding: 5px;
-                }
-                a {
-                    color: $typography-2;
-                    font-weight: 400;
-                    font-size: 15px;
-                    &:hover {
-                        text-decoration: none;
-                        text-shadow: none;
-                    }
-                }
-                &:hover {
-                    background-color: #38304F;
-                }
+        margin-left: 7px;
+        align-content: center;
+        .channel-btn {
+            background-color: transparent;
+            border-color: transparent;
+            border-radius: 5px;
+            padding: 5px;
+            color: $typography-2;
+            font-weight: 400;
+            font-size: 15px;
+            width: 230px;
+            text-align: left;
+            span {
+                padding: 5px;
+            }
+            &:hover {
+                background-color: #38304F;
             }
         }
+        .active {
+            color: $palace-gold;
+            background-color: #38304F;
+        }
     }
+    // .community-navigation-chlist {
+    //     display: flex;
+    //     flex-direction: column;
+
+    //     margin-top: 5px;
+    //     ul {
+    //         list-style-type: none;
+    //         li {
+    //             margin-top: 2px;
+    //             margin-left: -32px;
+    //             width: 230px;
+    //             padding: 9px 15px;
+    //             border-radius: 5px;
+    //             span {
+    //                 padding: 5px;
+    //             }
+    //             a {
+    //                 color: $typography-2;
+    //                 font-weight: 400;
+    //                 font-size: 15px;
+    //                 &:hover {
+    //                     text-decoration: none;
+    //                     text-shadow: none;
+    //                 }
+    //             }
+    //             &:hover {
+    //                 background-color: #38304F;
+    //             }
+    //         }
+    //     }
+    // }
 }
