--- a/src/components/CommunityNavigation/styles.scss
+++ b/src/components/CommunityNavigation/styles.scss
@@ -20,27 +20,45 @@
             font-weight: bold;
         }
     }
-    .community-navigation-chlist {
+    .community-navigation-channel-list {
         display: flex;
         flex-direction: column;
         margin-top: 5px;
         margin-left: 7px;
         align-content: center;
+        .channel-category {
+            display: flex;
+            flex-direction: column;
+            .channel-category-name {
+                font-weight: 500;
+                text-transform: uppercase;
+                color: $typography-2;
+                padding: 5px 10px;
+                font-size: 14px;
+                span {
+                    margin-right: 5px;
+                }
+            }
+        }
         .channel-btn {
             background-color: transparent;
             border-color: transparent;
+            padding: 3px 10px 4px 10px;
             border-radius: 5px;
             padding: 5px;
             color: $typography-2;
             font-weight: 400;
-            font-size: 15px;
+            font-size: 14px;
             width: 230px;
             text-align: left;
             span {
-                padding: 5px;
+                position: relative;
+                top: 1px;
+                padding: 5px 2px;
             }
             &:hover {
                 background-color: #38304F;
+                color: #cfd6db;
             }
         }
         .active {
